--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "jsx": "react",
         "esModuleInterop": true,
         "lib": ["es2019", "dom"],
+        "types": ["node"],
         "target": "ES6",
         
         "alwaysStrict": true,
